[gd_scene load_steps=23 format=2]

[ext_resource path="res://Enemies/slime.png" type="Texture" id=1]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Slime.gd" type="Script" id=3]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/light.png" type="Texture" id=5]
[ext_resource path="res://Enemies/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "happy",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 2.2929
height = 7.91827

[sub_resource type="CapsuleShape2D" id=13]
radius = 7.1109
height = 0.0

[sub_resource type="CircleShape2D" id=14]
radius = 52.079

[sub_resource type="CircleShape2D" id=15]
radius = 6.25089

[node name="Slime" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )

[node name="l2d_Slime" type="Light2D" parent="."]
position = Vector2( 0.255581, -5.61712 )
scale = Vector2( 0.498132, 0.498132 )
enabled = false
texture = ExtResource( 5 )
texture_scale = 0.4
color = Color( 0, 0.027451, 0.462745, 1 )
energy = 1.5
shadow_gradient_length = 3.0
shadow_filter = 2
shadow_filter_smooth = 10.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0710907, -5.95275 )
frames = SubResource( 11 )
animation = "happy"
frame = 2
playing = true
offset = Vector2( 0, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.19865, -1.12568 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.0936432, -4.21399 )
shape = SubResource( 13 )

[node name="Stats" parent="." instance=ExtResource( 4 )]

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="cs_playerDetection" parent="PlayerDetection" index="0"]
modulate = Color( 1, 1, 1, 0.698039 )
shape = SubResource( 14 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0.187286, -6.55509 )
shape = SubResource( 15 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_zero" from="Stats" to="." method="_on_Stats_health_zero"]

[editable path="Hurtbox"]
[editable path="PlayerDetection"]
[editable path="Hitbox"]
